--- a/events.html
+++ b/events.html
@@ -3,145 +3,161 @@ layout: default
 title: Events
 ---
 <div class="container">
-<h1 class="mt-5">{{ page.title }}</h1>
-<p class="lead"> Current and past events hosted by the Species File Group </p>
+  <h1 class="mt-5">{{ page.title }}</h1>
+  <p class="lead"> Current and past events hosted by the Species File Group </p>
 
-<p><em> Questions? </em> <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Chat with us on Gitter</a> or contact our community liaison Deborah Paul.</p>
+  <p><em> Questions? </em> <a href="https://gitter.im/SpeciesFileGroup/taxonworks">Chat with us on Gitter</a> or contact our community liaison Deborah Paul.</p>
 
-<h2> Current </h2>
+  <h2> Current </h2>
 
-<p><em>To join any of the Zoom meetings you will need a link to the Zoom room.</em> There are two ways to get the link:
+  <p><em>To join any of the Zoom meetings you will need a link to the Zoom room.</em> There are two ways to get the link:
+    <ul>
+      <li> Be sent the Zoom link via email as a reminder before the meeting (typically 1-2 days before). To do so, a) subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and b) click "confirm" in the first email you receive from the listserv. </li>
+      <li> Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
+    </ul>  
+  <em> We do not post the links here to prevent Zoom bombing.</em>
+  </p>
+
+  <h3> TaxonWorks Together 2022 </h3>
   <ul>
-    <li> Be sent the Zoom link via email as a reminder before the meeting (typically 1-2 days before). To do so, a) subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and b) click "confirm" in the first email you receive from the listserv. </li>
-    <li> Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
-</ul>    
-<em> We do not post the links here to prevent Zoom bombing.</em>
-</p>
+    <li>What: Our 3rd annual TaxonWorks community building event.</li>
+    <li>When: late 2022. Dates to be decided</li>
+    <li>Where: Zoom</li>
+    <li>Who: Open to anyone.</li>
+    <li>Your Ideas: <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">Please submit your input for events</a> at TaxonWorks Together 2022.</li>
+  </ul>
 
-<h3> TaxonWorks Together 2022 </h3>
-<ul>
-  <li>What: Our 3rd annual TaxonWorks community building event.</li>
-  <li>When: late 2022. Dates to be decided</li>
-  <li>Where: Zoom</li>
-  <li>Who: Open to anyone.</li>
-  <li>Your Ideas: <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">Please submit your input for events</a> at TaxonWorks Together 2022.</li>
-</ul>
+  <h2> Regular Events by Month </h2>
+  All these events are on Wednesdays at the same time every week. The flexible agendas are set by those attending the meetings.
+  The “early sessions” have topics (but are flexible, as need be). In the “late” sessions, topics are determined by those who join.
+  <table class="table">
+    <thead>
+      <tr>
+        <th>Wednesday</th>
+        <th>Early (<span id="early-time" data-utc-to-local="16:30, 17:30"></span>)</th>
+        <th>Late (<span id="late-time" data-utc-to-local="19:30, 20:30"></span>)</th>
+        <th>Next date</th>
+        <th>Countdown</th>
+      </tr>
+    </thead>
+    <tbody class="events align-middle">
+      <tr>
+        <td>1st</td>
+        <td>Nomenclature</td>
+        <td>
+          <span data-open>Open</span>
+        </td>
+        <td>
+          <span data-next-date="0" data-day="4"></span>
+        </td>
+        <td>
+          <span data-countdown></span>
+        </td>
+      </tr>
 
-<h2> Regular Events by Month </h2>
-All these events are on Wednesdays at the same time every week. The flexible agendas are set by those attending the meetings.
-The “early sessions” have topics (but are flexible, as need be). In the “late” sessions, topics are determined by those who join.
-<table class="table">
-<thead>
-  <tr>
-    <th>Wednesday</th>
-    <th>Early (<span data-utc-to-local="16:30, 17:30"></span>)</th>
-    <th>Late (<span data-utc-to-local="19:30, 20:30"></span>)</th>
-    <th>Next date</th>
-    <th>Countdown</th>
-  </tr>
-</thead>
-<tbody>
-  <tr>
-    <td>1st</td>
-    <td>Nomenclature</td>
-    <td>Open</td>
-    <td>
-      <span data-next-date="0" data-day="4"></span>
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>2nd</td>
-    <td>Digitization</td>
-    <td></td>
-    <td>
-      <span data-next-date="1" data-day="4"></span>
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>3rd</td>
-    <td>Matrices/Observations</td>
-    <td>Open</td>
-    <td>
-      <span data-next-date="2" data-day="4"></span>
-    </td>
-    <td></td>
-  </tr>
-  <tr>
-    <td>4th</td>
-    <td>Technical</td>
-    <td></td>
-    <td>
-      <span data-next-date="3" data-day="4"></span>
-    </td>
-    <td></td>
-  </tr>
-</tbody>
-</table>
+      <tr>
+        <td>2nd</td>
+        <td>Digitization</td>
+        <td></td>
+        <td>
+          <span 
+            data-next-date="1" data-day="4"></span>
+        </td>
+        <td>
+          <span data-countdown></span>
+        </td>
+      </tr>
 
-<h3> Nomenclature </h3>
-<ul>
-  <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. Sessions are  sometimes class-like for part of the time. Downstream sessions are planned with collaborators according to their needs and the general discussion that occurs in these meetings. </li>
-  <li>When: <b>1st Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
-  <li>Where: Zoom. </li>
-  <li>Who: Open to anyone.</li>
-  <li><a href="https://docs.google.com/document/d/1_Qs6Zg8o4RRP23aFZnf9qr2cf24NxfTRfkSqLTgcbyA/edit?usp=sharing">Nomenclature Notes</a></li>
- </ul>
+      <tr>
+        <td>3rd</td>
+        <td>Matrices/Observations</td>
+        <td>
+          <span data-open>Open</span>
+        </td>
+        <td>
+          <span data-next-date="2" data-day="4"></span>
+        </td>
+        <td>
+          <span data-countdown></span>
+        </td>
+      </tr>
 
-<h3> Digitization </h3>
-<ul>
-  <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr monthly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
-  <li>When: <b>2nd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
-  <li>Where: Zoom.  </li>
-  <li>Who: Open to anyone. </li>
-  <li><a href="https://docs.google.com/document/d/1-18eh4KWrySrlKnujri8Fuw-h55zHwNK27yeNceUPlc/edit?usp=sharing">Digitization Notes</a></li>
- </ul>
+      <tr>
+        <td>4th</td>
+        <td>Technical</td>
+        <td></td>
+        <td>
+          <span data-next-date="3" data-day="4"></span>
+        </td>
+        <td>
+          <span data-countdown></span>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 
-<h3> Matrices/Observations </h3>
-<ul>
-  <li>What: TaxonWorks supports building matrices. Join us in this 1-2 hr monthly open session focusing on building and using matrices and observations tools in TaxonWorks. Your questions set the agenda. Design and discussion of new functionality frequently happens.</li>
-  <li>When: <b>3rd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
-  <li>Where: Zoom.  </li>
-  <li>Who: Open to anyone. </li>
-  <li><a href="https://docs.google.com/document/d/1m3bUp0qXjUlxiOt7xBo5e3q3WQuoPpOcyKTAbS9QncA/edit?usp=sharing">Matrices Notes</a></li>
- </ul>
+  <h3> Nomenclature </h3>
+  <ul>
+    <li>What: TaxonWorks excels at digitizing nomenclature and its metadata. The agenda is set by users with specific questions and use cases. In addition we highlight new functionality related to digitization of nomenclature. Sessions are  sometimes class-like for part of the time. Downstream sessions are planned with collaborators according to their needs and the general discussion that occurs in these meetings. </li>
+    <li>When: <b>1st Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+    <li>Where: Zoom. </li>
+    <li>Who: Open to anyone.</li>
+    <li><a href="https://docs.google.com/document/d/1_Qs6Zg8o4RRP23aFZnf9qr2cf24NxfTRfkSqLTgcbyA/edit?usp=sharing">Nomenclature Notes</a></li>
+  </ul>
 
-<h3> Technical </h3>
-<ul>
-  <li>What: You are encouraged to contribute to the technical side of TaxonWorks any time. But, please do join us for a 1-2 hr monthly open session concentrating on software and services development. The agenda is set by you. Design and discussion of new functionality frequently happens. </li>
-  <li>When: <b>4th Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
-  <li>Where: Zoom.  </li>
-  <li>Who: Open to anyone. </li>
-  <li><a href="https://docs.google.com/document/d/1Mp3P7MvR8Wi8EnPxSuUzGPTgTHinoBooO9hCqsGkZRA/edit?usp=sharing">Technical Notes</a></li>
- </ul>
+  <h3> Digitization </h3>
+  <ul>
+    <li>What: Help grow a community of digitization expertise around TaxonWorks. A 1-2 hr monthly open question and answer session with a focus on natural history specimen digitization using TaxonWorks. The agenda is set by those with specific questions. Updates to TaxonWorks are briefly covered. Design and discussion of new functionality frequently happens. </li>
+    <li>When: <b>2nd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+    <li>Where: Zoom.  </li>
+    <li>Who: Open to anyone. </li>
+    <li><a href="https://docs.google.com/document/d/1-18eh4KWrySrlKnujri8Fuw-h55zHwNK27yeNceUPlc/edit?usp=sharing">Digitization Notes</a></li>
+  </ul>
 
-<h3> Open </h3>
-<ul>
-  <li>What: Help build the TaxonWorks Community. In this open session, all topics welcome. A 1-2 hr monthly open session. </li>
-  <li>When: <b>1st and 3rd Wednesdays, 13:30 CST (19:30 UTC), <span data-utc-to-local="19:30, 20:30"></span></b></li>
-  <li>Where: Zoom.  </li>
-  <li>Who: Open to anyone. </li>
-  <li><a href="https://docs.google.com/document/d/1mbh5Q0y-EiF-WP5_vVZgUIByLO8wKDiNookdJ8kVWFE/edit?usp=sharing">Open Notes</a></li>
- </ul>
+  <h3> Matrices/Observations </h3>
+  <ul>
+    <li>What: TaxonWorks supports building matrices. Join us in this 1-2 hr monthly open session focusing on building and using matrices and observations tools in TaxonWorks. Your questions set the agenda. Design and discussion of new functionality frequently happens.</li>
+    <li>When: <b>3rd Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+    <li>Where: Zoom.  </li>
+    <li>Who: Open to anyone. </li>
+    <li><a href="https://docs.google.com/document/d/1m3bUp0qXjUlxiOt7xBo5e3q3WQuoPpOcyKTAbS9QncA/edit?usp=sharing">Matrices Notes</a></li>
+  </ul>
+
+  <h3> Technical </h3>
+  <ul>
+    <li>What: You are encouraged to contribute to the technical side of TaxonWorks any time. But, please do join us for a 1-2 hr monthly open session concentrating on software and services development. The agenda is set by you. Design and discussion of new functionality frequently happens. </li>
+    <li>When: <b>4th Wednesdays, 10:30 CST (16:30 UTC), <span data-utc-to-local="16:30, 17:30"></span></b></li>
+    <li>Where: Zoom.  </li>
+    <li>Who: Open to anyone. </li>
+    <li><a href="https://docs.google.com/document/d/1Mp3P7MvR8Wi8EnPxSuUzGPTgTHinoBooO9hCqsGkZRA/edit?usp=sharing">Technical Notes</a></li>
+  </ul>
+
+  <h3> Open </h3>
+  <ul>
+    <li>What: Help build the TaxonWorks Community. In this open session, all topics welcome. A 1-2 hr monthly open session. </li>
+    <li>When: <b>1st and 3rd Wednesdays, 13:30 CST (19:30 UTC), <span data-utc-to-local="19:30, 20:30"></span></b></li>
+    <li>Where: Zoom.  </li>
+    <li>Who: Open to anyone. </li>
+    <li><a href="https://docs.google.com/document/d/1mbh5Q0y-EiF-WP5_vVZgUIByLO8wKDiNookdJ8kVWFE/edit?usp=sharing">Open Notes</a></li>
+  </ul>
 
 
-<h2> Past </h2>
-<em> As of end 2021 </em>
+  <h2> Past </h2>
+  <em> As of end 2021 </em>
 
-<h3> TaxonWorks Together 2021 </h3>
-See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021">the github-based homepage</a> for this event.
+  <h3> TaxonWorks Together 2021 </h3>
+  See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2021">the github-based homepage</a> for this event.
 
-<h3> TaxonWorks Together 2020 </h3>
-See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the github-based homepage</a> for this event.
+  <h3> TaxonWorks Together 2020 </h3>
+  See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the github-based homepage</a> for this event.
 
-<h3> TaxonWorks Late Nite </h3>
-<ul>
-  <li>What: An ongoing series of late nite "chill" and chat sessions with the TaxonWorks and broader community.</li>
-  <li>When: <b> April 21, <span data-utc-to-local="01:30, 03:00"></span></b>.</li>
-  <li>Where: Zoom. </li>
-  <li>Who: Open to anyone.</li>
-</ul>
+  <h3> TaxonWorks Late Nite </h3>
+  <ul>
+    <li>What: An ongoing series of late nite "chill" and chat sessions with the TaxonWorks and broader community.</li>
+    <li>When: <b> April 21, <span data-utc-to-local="01:30, 03:00"></span></b>.</li>
+    <li>Where: Zoom. </li>
+    <li>Who: Open to anyone.</li>
+  </ul>
 
 </div>
 
@@ -162,9 +178,13 @@ See <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2020">the g
     return utcTime.toLocaleTimeString([], { hour: '2-digit', minute: '2-digit' })
   }
 
+  function getUTCDatesInLocal (dates) {
+    return dates.split(',').map(item => convertUTCToLocal(item.trim()))
+  }
+
   function parseUTCtoTimezone (data) {
     const timeZone = Intl.DateTimeFormat().resolvedOptions().timeZone.replaceAll('_', ' ');
-    const time = data.split(',').map(function (item) { return convertUTCToLocal(item.trim()) }).join(' - ')
+    const time = getUTCDatesInLocal(data).join(' - ')
 
     return time + ' ' + timeZone;
   }
@@ -209,8 +229,7 @@ function twoDigits (number) {
   return ("0" + number).slice(-2)
 }
 
-function getNextDateFromDayAndWeek (day, week) {
-  const currentDate = new Date()
+function getNextDateFromDayAndWeek (day, week, currentDate = new Date()) {
   const currentMonth = (currentDate.getMonth() + 1)
   const currentYear = currentDate.getFullYear()
   const nextDate = new Date(currentDate.setMonth(currentMonth))
@@ -225,19 +244,111 @@ function getNextDateFromDayAndWeek (day, week) {
     : `${currentYear}/${twoDigits(currentMonth)}/${twoDigits(DaysThisMonth[week])}`
 }
 
+function getNextDateObject (date) {
+  const present = new Date()
+  const nextDate = new Date(date)
 
-document.querySelectorAll('[data-alternate-week]').forEach(element => {
-  element.textContent = alternateWeekOnDay(element.getAttribute('data-alternate-week'))
-})
+  var seconds = Math.floor((nextDate - present) / 1000)
+  var minutes = Math.floor(seconds / 60)
+  var hours = Math.floor(minutes / 60)
+  var days = Math.floor(hours / 24)
+
+  hours = hours - (days * 24)
+  minutes = minutes - (days * 24 * 60) - (hours * 60)
+  seconds = seconds - (days * 24 * 60 * 60) - (hours * 60 * 60) - (minutes * 60)
+
+  return {
+    days: days,
+    hours: hours,
+    minutes: minutes,
+    seconds: seconds
+  }
+}
+
+function printCountDown(element, dateObject) {
+   element.innerHTML = `<div class="countdown py-4">
+      <span class="h5 font-weight-bold">${dateObject.days}</span>Day
+      <span class="h5 font-weight-bold">${dateObject.hours}</span>Hr
+      <span class="h5 font-weight-bold">${dateObject.minutes}</span>Min
+      <span class="h5 font-weight-bold">${dateObject.seconds}</span>Sec
+    </div>`
+}
 
 document.querySelectorAll('[data-utc-to-local]').forEach(element => {
   element.textContent = parseUTCtoTimezone(element.getAttribute('data-utc-to-local'));
 })
 
-document.querySelectorAll('[data-next-date]').forEach(element => {
-  const week = element.getAttribute('data-next-date')
-  const day = element.getAttribute('data-day')
+function isTimeAlreadyPassed(startTime, endTime) {
+  return startTime > endTime
+}
 
-  element.textContent = getNextDateFromDayAndWeek(Number(day), Number(week))
+function addDays (date, days) {
+    date.setDate(date.getDate() + days)
+    return date
+  }
+
+const earlyDateElement = document.querySelector('#early-time')
+const lateDateElement = document.querySelector('#late-time')
+const [startEarlyTime, endEarlyTime] = getUTCDatesInLocal(earlyDateElement.getAttribute('data-utc-to-local'))
+const [startLateTime, endLateTime] = getUTCDatesInLocal(lateDateElement.getAttribute('data-utc-to-local'))
+
+
+const eventsElement = document.querySelectorAll('tbody.events tr').forEach(element => {
+  const nextDateElement = element.querySelector('[data-next-date]')
+  const countdownElement = element.querySelector('[data-countdown]')
+  const week = nextDateElement.getAttribute('data-next-date')
+  const day = nextDateElement.getAttribute('data-day')
+
+  const isOpen = !!element.querySelector('[data-open]')
+
+  
+  function updateElements () {
+    let newDate = getNextDateFromDayAndWeek(Number(day), Number(week))
+    const earlyEventStartTime = new Date(newDate + ' ' + startEarlyTime)
+    const earlyEventEndTime = new Date(newDate + ' ' + endEarlyTime)
+    const lateEventStartTime = new Date(newDate + ' ' + startLateTime)
+    const lateEventEndTime = new Date(newDate + ' ' + endLateTime)
+    const now = new Date()
+
+    let dateObject = getNextDateObject(newDate)
+
+    if (isTimeAlreadyPassed(now, earlyEventStartTime)) {
+      if (!isTimeAlreadyPassed(now, earlyEventEndTime)) {
+        countdownElement.innerHTML = "<span>We're live!</span>"  
+      } else {
+        if (isOpen) {
+          if (isTimeAlreadyPassed(now, lateEventStartTime)) {
+            if (!isTimeAlreadyPassed(now, lateEventEndTime) && isOpen) {
+              countdownElement.innerHTML = "<span>We're live!</span>"  
+            } else {
+              newDate = getNextDateFromDayAndWeek(Number(day), Number(week), addDays(new Date(), 1))
+              dateObject = getNextDateObject(newDate)
+
+              printCountDown(countdownElement, dateObject)
+            }
+          } else {
+            newDate = getNextDateFromDayAndWeek(Number(day), Number(week))
+            dateObject = getNextDateObject(lateEventStartTime)
+
+            printCountDown(countdownElement, dateObject)
+          }
+        } else {
+          newDate = getNextDateFromDayAndWeek(Number(day), Number(week), addDays(new Date(), 1))
+          dateObject = getNextDateObject(newDate)
+
+          printCountDown(countdownElement, dateObject)
+        }
+      }
+    } else {
+      dateObject = getNextDateObject(earlyEventStartTime)
+
+      printCountDown(countdownElement, dateObject)
+    }
+  
+    nextDateElement.textContent = newDate
+  }
+
+  updateElements()
+  setInterval(() => { updateElements() }, 1000)
 })
 </script>
