--- a/events.html
+++ b/events.html
@@ -10,12 +10,12 @@ title: Events
 
   <h2> Current </h2>
 
-  <p><em>To join any of the Zoom meetings you will need a link to the Zoom room.</em> There are two ways to get the link:
+  <p><em>Join our Wednesday meetings via Zoom.</em> Please note:
     <ul>
-      <li> Be sent the Zoom link via email as a reminder before the meeting (typically 1-2 days before). To do so, a) subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and b) click "confirm" in the first email you receive from the listserv. </li>
-      <li> Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
+      <li>Link: <a href="https://https://illinois.zoom.us/my/sfgcommons">https://illinois.zoom.us/my/sfgcommons<a/>.</li>
+      <li>Reminder via listerv before the meetings (typically 1-2 days before). To do so, a) subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and b) click "confirm" in the first email you receive from the listserv. </li>
+      <li>Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
     </ul>  
-  <em> We do not post the links here to prevent Zoom bombing.</em>
   </p>
 
   <h3> TaxonWorks Together 2022 </h3>
