edit url syntax

--- a/events.html
+++ b/events.html
@@ -12,7 +12,7 @@ title: Events
 
   <p><em>Join our Wednesday meetings via Zoom.</em> Please note:
     <ul>
-      <li>Link: <a href="https://https://illinois.zoom.us/my/sfgcommons">https://illinois.zoom.us/my/sfgcommons<a/>.</li>
+      <li>Link: <a href="https://illinois.zoom.us/my/sfgcommons">https://illinois.zoom.us/my/sfgcommons<a/>.</li>
       <li>Reminder via listerv before the meetings (typically 1-2 days before). To do so, a) subscribe to this email list: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and b) click "confirm" in the first email you receive from the listserv. </li>
       <li>Chat with a member of the Species File Group and its collaborators at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
     </ul>  
