--- a/collaboration.html
+++ b/collaboration.html
@@ -16,7 +16,7 @@ title: Collaboration
     <h3> Current opportunities </h3>
     <ul>
       <li> See <a href="http://orthsoc.org/resources/grants-awards/"> grants via the Orthopterist's society</a> </li>
-      <li> Contact R. Edward DeWalt regarding current opportunities for small awards that fill gaps in the Catalog of Life </li>
+      <li> Contact R. Edward DeWalt regarding current opportunities for small awards that fill gaps in the <a href="https://catalogueoflife.org/">Catalogue of Life</a></li>
     </ul>
 
     <div class="container">
@@ -24,9 +24,9 @@ title: Collaboration
       <p> The SFG has offered support in the past in the following ways:</p>
       <ul>
         <li> Undergraduate and graduate student stipends </li>
-        <li> Societies, like the Entomological Collection's Network </li>
+        <li> Societies, like the <a href="https://ecnweb.net/">Entomological Collections Network</a></li>
         <li> Curators, at an hourly rate</li>
-        <li> Taxonomists, particularly those contributing to the Catalogue oF life Curators, at an hourly rate</li>
+        <li> Taxonomists, particularly those contributing to the Catalogue of Life Curators, at an hourly rate</li>
       </ul>
     </div>
   </div>
