Post 022-02-01-taxonworks-together-2022

--- a/blog.html
+++ b/blog.html
@@ -15,14 +15,16 @@ pagination:
       </header>
 
     {% for post in paginator.posts %}
-      <article class="container">
+    <div class="container">
+      <article class="m-2">
         <h2>{{ post.title }}</h2>
         <p>{{ post.date}} by <a href="#">{{ post.author }} </a></p>
         
         {{ post.excerpt }}
 
-        <a class="btn btn-primary" href="{{post.url}}">Continue reading...</a>
+        <a class="btn btn-primary mb-4" href="{{post.url}}">Continue reading...</a>
       </article>
+    </div>
     {% endfor %}
 
     <nav class="my-4 container" aria-label="Pagination">
