added text and links for mou and sandbox services

--- a/collaboration.html
+++ b/collaboration.html
@@ -42,6 +42,16 @@ title: Collaboration
   </div>
 
   <div class="container">
+    <h2 class="mt-5">Community Resources</h2>
+    <p class="lead">The SFG provides live instances of various open-source software packages as tools for our collaborators.  We ask our collaborators to read and understand our shared expectations in these endeavors.</p> 
+   <div>
+     <h3 class="mt-5">TaxonWorks Resources</h3>
+    <p> We have resources for <a href="https://github.com/SpeciesFileGroup/speciesfilegroup.github.io/blob/main/_docs/taxonworks_in_production_at_sfg.md">production</a>
+      and <a href="https://github.com/SpeciesFileGroup/speciesfilegroup.github.io/blob/main/_docs/taxonworks_sandboxes_at_sfg.md">sandboxes.</a></p>
+  </div>
+</div>
+  
+  <div class="container">
     <h2 class="mt-5">Organizations</h2>
     <p class="lead"> </p>
     <ul>
