nesting, tw production, sandboxes

--- a/collaboration.html
+++ b/collaboration.html
@@ -8,16 +8,21 @@ title: Collaboration
   </div>
 
   <h1 class="mt-5">{{ page.title }}</h1>
-  <p class="lead"> We work with a wide range of people and organizations to advance biodiversity informatics</p>
+  <span class="lead"> We work with a wide range of people and organizations to advance biodiversity informatics</span>
 
   <div class="container">
     <h2 class="mt-5">Funding from the Species File Group</h2>
-    <p class="lead"> Collaboration has been aided by awards from the SFG that advance biodiversity informatics </p>
-    <h3> Current opportunities </h3>
-    <ul>
-      <li> See <a href="http://orthsoc.org/resources/grants-awards/"> grants via the Orthopterist's society</a> </li>
-      <li> Contact R. Edward DeWalt regarding current opportunities for small awards that fill gaps in the <a href="https://catalogueoflife.org/">Catalogue of Life</a></li>
-    </ul>
+    <span class="lead"> Collaboration has been aided by awards from the SFG that advance biodiversity informatics </span>
+
+    <div class="container">
+      <h3> Current opportunities </h3>
+      <ul>
+        <li> See <a href="http://orthsoc.org/resources/grants-awards/"> grants via the Orthopterist's society</a> </li>
+        <li> Contact R. Edward DeWalt regarding current opportunities for small awards that fill gaps in the <a href="https://catalogueoflife.org/">Catalogue of Life</a></li>
+      </ul>
+    </div>
+
+    <div class="container">
       <h3>Past opportunities</h3>
       <p> The SFG has offered support in the past in the following ways:</p>
       <ul>
@@ -26,6 +31,17 @@ title: Collaboration
         <li> Curators, at an hourly rate</li>
         <li> Taxonomists, particularly those contributing to the Catalogue of Life Curators, at an hourly rate</li>
       </ul>
+    </div>
+  </div>
+
+  <div class="container"> 
+    <h2 class="mt-5">Community Resources</h2>
+    <span class="lead">The SFG provides live instances of various open-source software packages as tools for our collaborators. We ask our collaborators to read and understand our shared expectations in these endeavors.</span>
+    <div class="container">
+      <h3>TaxonWorks</h3>
+      <p> We have resources for <a href="/docs/taxonworks_in_production_at_sfg.html">production</a>
+      and <a href="/docs/taxonworks_sandboxes_at_sfg.html">sandbox</a> instances.</p>
+    </div>
   </div>
 
   <div class="container">
@@ -39,16 +55,7 @@ title: Collaboration
   </div>
 
   <div class="container">
-    <h2 class="mt-5">Community Resources</h2>
-    <p class="lead">The SFG provides live instances of various open-source software packages as tools for our collaborators.  We ask our collaborators to read and understand our shared expectations in these endeavors.</p> 
-     <h3 class="mt-5">TaxonWorks Resources</h3>
-    <p> We have resources for <a href="https://github.com/SpeciesFileGroup/speciesfilegroup.github.io/blob/main/_docs/taxonworks_in_production_at_sfg.md">production</a>
-      and <a href="https://github.com/SpeciesFileGroup/speciesfilegroup.github.io/blob/main/_docs/taxonworks_sandboxes_at_sfg.md">sandboxes.</a></p>
-  </div>
-  
-  <div class="container">
     <h2 class="mt-5">Organizations</h2>
-    <p class="lead"> </p>
     <ul>
       <li>Biodiversity Heritage Library</li>
       <li>HaithiTrust</li>
@@ -71,7 +78,7 @@ title: Collaboration
     <p class="lead"> Workbenches developed and hosted by the SFG have sparked many collaborations </p>
 
     <div class="container">
-      <h3 class="mt-5">Species Files</h3>
+      <h3>Species Files</h3>
       <p class="lead"> Taxon-centric projects using the original Species Files Software </p>
       <ul>
         <li>See <a href="http://help.speciesfile.org/index.php/Current_Species_Files">Current Species Files</a></li>
@@ -79,7 +86,7 @@ title: Collaboration
     </div>
 
     <div class="container">
-      <h3 class="mt-5">3i</h3>
+      <h3>3i</h3>
       <p class="lead"> Projects using the 3i, a precursor to TaxonWorks</p>
       <ul>
         <li> See <a href="http://dmitriev.speciesfile.org/index.asp"> 3I Interactive Keys and Taxonomic Databases </a></li>
@@ -87,7 +94,7 @@ title: Collaboration
     </div> 
 
     <div class="container">
-      <h3 class="mt-5">mx</h3>
+      <h3>mx</h3>
       <p class="lead"> A range of projects remain actively curated in <a href="http://mx.phenomix.org">mx</a>, another precursor to TaxonWorks</p>
     </div>
   </div>
@@ -101,11 +108,11 @@ title: Collaboration
     <h2 class="mt-5">Labs</h2>
     <p class="lead"> Labs using SFG infrastructure in return guiding us with feedback and direction</p>
     <ul>
-      <li><a href="https://mndi.museunacional.ufrj.br/aracnologia/aracnol.htm>Adriano Kury's Arachno Lab<a/></li>
-        <li><a href="https://sites.psu.edu/deanslab/">Dean's Lab, Penn State</a></li>
+      <li><a href="https://mndi.museunacional.ufrj.br/aracnologia/aracnol.htm>Adriano Kury's Arachno Lab"</a></li>
+      <li><a href="https://sites.psu.edu/deanslab/">Dean's Lab, Penn State</a></li>
       <li>Smith Lab</li>
-        <li><a href="https://leafhopper.inhs.illinois.edu/">Dietrich Leafhopper Lab</a></li>
-        <li><a href="https://hymenoptera.ucr.edu/hymenopteran_systematics.html">Heraty Lab</a></li>
+      <li><a href="https://leafhopper.inhs.illinois.edu/">Dietrich Leafhopper Lab</a></li>
+      <li><a href="https://hymenoptera.ucr.edu/hymenopteran_systematics.html">Heraty Lab</a></li>
       <li>Woolley Lab</li>
       <li>Wharton Lab</li>
     </ul>
