adding 5th Wed No Meeting in table
Adding to table that there are no meetings on 5th Wednesdays.

--- a/events.html
+++ b/events.html
@@ -108,6 +108,12 @@ title: Events
           <span data-countdown></span>
         </td>
       </tr>
+      
+      <tr>
+        <td>5th</td>
+        <td>No Meetings on 5th Wednesdays</td>
+        <td></td>
+      </tr>
 
     </tbody>
   </table>
