--- a/events.html
+++ b/events.html
@@ -12,13 +12,19 @@ title: Events
 
   <p><em>Join our Wednesday meetings via Zoom.</em> Please note:
     <ul>
-      <li>Link: <a href="https://illinois.zoom.us/my/sfgcommons?pwd=eVI4UkdIUzdIYXRIcUhreVdES2ZQQT09">https://illinois.zoom.us/my/sfgcommons?pwd=eVI4UkdIUzdIYXRIcUhreVdES2ZQQT09<a/>.</li>
-      <li>Reminder Service (via listerv typically 1-2 days before):</li>
+      <li><em>Link</em>: <a href="https://illinois.zoom.us/my/sfgcommons?pwd=eVI4UkdIUzdIYXRIcUhreVdES2ZQQT09">https://illinois.zoom.us/my/sfgcommons?pwd=eVI4UkdIUzdIYXRIcUhreVdES2ZQQT09<a/>.</li>
+      <li><em>Reminder Service</em> (via listerv typically 1-2 days before):</li>
       <ol>
-        <li>subscribe to the listserv: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and</li>
+        <li>subscribe to the <em>email listserv</em>: <a href="https://lists.illinois.edu/lists/info/sfg-announce">https://lists.illinois.edu/lists/info/sfg-announce</a> and</li>
         <li>click "confirm" in the first email you receive from the listserv.</li>
       </ol>
-      <li>Chat with a member of the Species File Group and its collaborators anytime at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
+      <li><em>Chat</em> with a member of the Species File Group and its collaborators anytime at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
+      <li><em>TaxonWorks Weekly Plus Calendar</em>: add TaxonWorks Weekly events to your calendar now. <em>Three options</em> for you:</li>
+        <ul>
+          <li>Use this <a href="https://calendar.google.com/calendar/embed?src=dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com&ctz=America%2FChicago">Public URL</a></li> to see the TaxonWorks Weekly Plus Calendar. (It's not pretty, but it works without login).
+          <li>Get this <em><a href="https://calendar.google.com/calendar/u/0?cid=ZHQxaDQxdTRkdjd2c2VsN2lvYnJkcG1zNThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">shareable calendar link</a></em> if you want live updates to your calendar in case of changes. (For this link to work you must have a google account and be logged in).</li>
+          <li>Use this <em><a href="https://calendar.google.com/calendar/ical/dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com/public/basic.ics">ics file</a></em> to import into your calendar. (I don't think it will live update though).</li>
+        </ul>
     </ul>  
   </p>
 
