--- a/events.html
+++ b/events.html
@@ -21,9 +21,9 @@ title: Events
       <li><em>Chat</em> with a member of the Species File Group and its collaborators anytime at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
       <li><em>TaxonWorks Weekly Plus Calendar</em>: add TaxonWorks Weekly events to your calendar now. <em>Three options</em> for you:</li>
         <ul>
-          <li>Use this <a href="https://calendar.google.com/calendar/embed?src=dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com&ctz=America%2FChicago">Public URL</a></li> to see the TaxonWorks Weekly Plus Calendar. (It's not pretty, but it works without login).
-          <li>Get this <em><a href="https://calendar.google.com/calendar/u/0?cid=ZHQxaDQxdTRkdjd2c2VsN2lvYnJkcG1zNThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">shareable calendar link</a></em> if you want live updates to your calendar in case of changes. (For this link to work you must have a google account and be logged in).</li>
-          <li>Use this <em><a href="https://calendar.google.com/calendar/ical/dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com/public/basic.ics">ics file</a></em> to import into your calendar. (I don't think it will live update though).</li>
+          <li>Use this <a href="https://calendar.google.com/calendar/embed?src=dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com&ctz=America%2FChicago">Public URL</a></li> to see the TaxonWorks Weekly Plus Calendar. (It's not pretty, but it works without login, and updates with any changes made on our end).
+          <li>Get this <em><a href="https://calendar.google.com/calendar/u/0?cid=ZHQxaDQxdTRkdjd2c2VsN2lvYnJkcG1zNThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">shareable calendar link</a></em> if you want to import into your Google calendar and have live updates. (For this link to work you must have a google account and be logged in).</li>
+          <li>Use this <em><a href="https://calendar.google.com/calendar/ical/dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com/public/basic.ics">ics file</a></em> to import into your calendar. (Only updates if you re-download, if we make any changes on our end).</li>
         </ul>
     </ul>  
   </p>
