Adding help note for shareable calendar link

--- a/events.html
+++ b/events.html
@@ -21,7 +21,8 @@ title: Events
       <li><em>Chat</em> with a member of the Species File Group and its collaborators anytime at <a href="https://gitter.im/SpeciesFileGroup/taxonworks">https://gitter.im/SpeciesFileGroup/taxonworks</a>. 
       <li><em>TaxonWorks Weekly Plus Calendar</em>: add TaxonWorks Weekly events to your calendar now. <em>Three options</em> for you:</li>
         <ul>
-          <li>Get this <em><a href="https://calendar.google.com/calendar/u/0?cid=ZHQxaDQxdTRkdjd2c2VsN2lvYnJkcG1zNThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">shareable calendar link</a></em> if you want to import into your Google calendar and have live updates. (For this link to work you must have a google account and be logged in).</li>
+          <li>Get this <em><a href="https://calendar.google.com/calendar/u/0?cid=ZHQxaDQxdTRkdjd2c2VsN2lvYnJkcG1zNThAZ3JvdXAuY2FsZW5kYXIuZ29vZ2xlLmNvbQ">
+            shareable calendar link</a></em> if you want to import into your Google calendar and have live updates. (For this link to work you must have a google account and be logged in. You'll be asked to **Add Calendar** and then to change to your **Time Zone**).</li>
           <li>Use this <em><a href="https://calendar.google.com/calendar/ical/dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com/public/basic.ics">ics file</a></em> to import into your calendar. (Only updates if you re-download, if we make any changes on our end).</li>
           <li>Use this <a href="https://calendar.google.com/calendar/embed?src=dt1h41u4dv7vsel7iobrdpms58%40group.calendar.google.com&ctz=America%2FChicago">Public URL</a></li> to see the TaxonWorks Weekly Plus Calendar (Chicago TIME). (It's not pretty, but it works without login, and updates with any changes made on our end).</li>
       </ul>
