adding dates for TWT 2022

--- a/events.html
+++ b/events.html
@@ -32,7 +32,7 @@ title: Events
   <h3> TaxonWorks Together 2022 </h3>
   <ul>
     <li>What: Our 3rd annual TaxonWorks community building event.</li>
-    <li>When: late 2022. Dates to be decided</li>
+    <li>When: 12 - 14 September 2022.</li>
     <li>Where: Zoom</li>
     <li>Who: Open to anyone.</li>
     <li>Your Ideas: <a href="https://github.com/SpeciesFileGroup/taxonworks_together_2022">Please submit your input for events</a> at TaxonWorks Together 2022.</li>
